--- a/zachet.html
+++ b/zachet.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Lab_11</title>
+    <title>Зачетная книжка</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="zachet.css" rel="stylesheet">
@@ -10,20 +10,21 @@
 
 <body>
 <nav class="navbar navbar-expand-md navbar-light sticky-top" style="background: #e3f2fd;">
-    <div class="d-flex w-100 order-0">
+    <div class="d-flex w-50">
         <a class="navbar-brand ml-1" href="#" style="font-weight: bold">Деканат</a>
-        <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"
+        <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
+                class="navbar-toggler"
                 data-target="#navbarSupportedContent" data-toggle="collapse" type="button">
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse justify-content-center order-2" id="navbarSupportedContent">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
+        <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+            <ul class="navbar-nav nav-pills">
+                <li class="nav-item">
                     <a class="nav-link" href="mainPage.html">Общая информация</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="zachet.html">Зачетная книжка</a>
+                <li class="nav-item active">
+                    <a class="nav-link active text-light" href="zachet.html">Зачетная книжка</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Одногруппники</a>
@@ -33,112 +34,51 @@
     </div>
 </nav>
 
-<div class="container">
-    <table class="shadow">
+<div class="input-group container my-3 col-3">
+    <div class="input-group-prepend">
+        <label class="input-group-text" for="semseter">Семестр</label>
+    </div>
+    <select class="custom-select" id="semseter">
+        <option selected value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+    </select>
+</div>
+
+<div class="container d-flex flex-column justify-content-center align-items-center p-2">
+    <table class="shadow col-10 mb-3" id="zachet">
         <tr>
             <th class="name" colspan="5">
-                <h2 align=center>Зачеты</h2>
+                <h2 class="text-center">Зачеты</h2>
             </th>
         </tr>
         <tr>
-            <th class="name">Наименование дисциплины</th>
-            <th class="name">Оценка</th>
-            <th class="name">Преподаватель</th>
+            <th class="name text-center">Наименование дисциплины</th>
+            <th class="name text-center">Оценка</th>
+            <th class="name text-center">Преподаватель</th>
         </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-
     </table>
-    <table class="shadow">
+    <table class="shadow col-10" id="exam">
         <tr>
             <th class="name" colspan="5">
-                <h2 align=center>Экзамены</h2>
+                <h2 class="text-center">Экзамены</h2>
             </th>
         </tr>
         <tr>
-            <th class="name">Наименование дисциплины</th>
-            <th class="name">Оценка</th>
-            <th class="name">Преподаватель</th>
+            <th class="name text-center">Наименование дисциплины</th>
+            <th class="name text-center">Оценка</th>
+            <th class="name text-center">Преподаватель</th>
         </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-
     </table>
 </div>
 
-<script crossorigin="anonymous"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script src="js/jquery-3.4.1.js"></script>
 <script crossorigin="anonymous"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script src="js/bootstrap.js"></script>
 <script src="script.js"></script>
+<script src="main_script.js"></script>
+<script src="zachet.js"></script>
 </body>
 </html>
